Added some data to files

--- a/DataScienceEcosystem5.ipynb
+++ b/DataScienceEcosystem5.ipynb
@@ -14,8 +14,19 @@
    "metadata": {},
    "source": [
     "In this notebook, Data Science Tools and Ecosystem are summarized.\n",
-    "1. "
+    "1. PyTorch\n",
+    "2. SciKit-Learn\n",
+    "3. Numpy\n",
+    "4. Pandas"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5e25f08",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
