--- a/DataScienceEcosystem8.ipynb
+++ b/DataScienceEcosystem8.ipynb
@@ -2,13 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7da72863",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17\n"
+     ]
+    }
+   ],
    "source": [
-    "This a simple arithmetic expression to mutiply then add integers"
+    "#This a simple arithmetic expression to mutiply then add integers\n",
+    "a = (3*4)+5\n",
+    "print(a)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "330422ea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
