--- a/DataScienceEcosystem9.ipynb
+++ b/DataScienceEcosystem9.ipynb
@@ -2,15 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fc44cac5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.3333333333333335\n"
+     ]
+    }
+   ],
    "source": [
     "#This will convert 200 minutes to hours by diving by 60\n",
     "minutes = 200\n",
-    "hours = 200/6"
+    "hours = 200/60\n",
+    "print(hours)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8868624",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
